<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#aaaaaa"
    tools:context=".views.ConfigurationView">

    <data>
        <variable
            name="viewModel"
            type="com.example.cs2340game.viewmodels.ConfigurationViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameRequirement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:id="@+id/nameTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="40sp"
            android:hint="@string/config_name_hint"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/leftGuideline"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="username"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy" />

                <ImageButton
                    android:id="@+id/easy_button"
                    android:text="@string/easy"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/config_triangle_sprite"
                    android:src="@drawable/triangle_sprite"
                    app:layout_constraintRight_toLeftOf="@id/rightGuideline"
                    app:layout_constraintTop_toBottomOf="@id/topGuideline"
                    android:scaleType="fitCenter"
                    android:onClick="onClick"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium" />

            <ImageButton
                android:id="@+id/medium_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/config_square_sprite"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topGuideline"
                android:src="@drawable/square_sprite"
                android:scaleType="fitCenter"
                android:onClick="onClick" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/hard" />

            <ImageButton
                android:id="@+id/hard_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/config_circle_sprite"
                android:onClick="onClick"
                android:scaleType="fitCenter"
                android:src="@drawable/circle_sprite"
                app:layout_constraintLeft_toRightOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/topGuideline" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_avatar"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/sprite1"
                android:text="@string/easy"
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:contentDescription="@string/config_triangle_sprite"
                android:src="@drawable/sprite1"
                app:layout_constraintRight_toLeftOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/topGuideline"
                android:scaleType="fitCenter"
                android:onClick="onClick"/>

            <ImageButton
                android:id="@+id/sprite2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/config_square_sprite"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topGuideline"
                android:src="@drawable/sprite2"
                android:scaleType="fitCenter"
                android:onClick="onClick" />

            <ImageButton
                android:id="@+id/sprite3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/config_circle_sprite"
                android:onClick="onClick"
                android:scaleType="fitCenter"
                android:src="@drawable/sprite3"
                app:layout_constraintLeft_toRightOf="@id/leftGuideline"
                app:layout_constraintTop_toBottomOf="@id/topGuideline" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.88" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.90" />

        <Button
            android:id="@+id/next_button"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#700000"
            android:onClick="onClick"
            android:text="@string/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/bottomGuideline" />
    </LinearLayout>

</layout>